--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -128,7 +128,7 @@
 
     --t_uf: all 250ms ease-in-out;
     --t_f: all 350ms ease-in-out;
-    --t_M: all 750ms ease-in-out;
+    --t_m: all 750ms ease-in-out;
     --t_s: all 1000ms ease-in-out;
 
     --titilliumFont: "Titillium Web", sans-serif;
@@ -145,6 +145,8 @@
     --bgC_t: var(--whiteT);
     --bgC_st: var(--whiteST);
     --vueIconText: rgb(51, 51, 51);
+
+    color-scheme: light;
 }
 [color-scheme="dark"] {
     --fc: var(--logoMintD);
@@ -157,6 +159,7 @@
     --bgC_st: var(--blackST);
 
     --vueIconText: rgb(204, 204, 204);
+    color-scheme: dark;
 }
 
 *,
@@ -614,20 +617,20 @@ I {
         fill: var(--midGray);
     }
     .watch_mer {
-        transition: var(--t_M);
+        transition: var(--t_m);
     }
 
-    .icon_animation {
+    [icon-animation] {
         opacity: 0;
         transform: translateY(4rem);
-        transition: var(--t_M);
+        transition: var(--t_m);
     }
-    .screen_animation,
-    .screen_tablet_animation {
+    [screen-animation],
+    [screen-tablet-animation] {
         opacity: 0;
-        transition: var(--t_M);
+        transition: var(--t_m);
     }
-    .dev_screen {
+    [dev-screen] {
         transition-delay: 500ms;
     }
     .icon_show {
@@ -640,7 +643,7 @@ I {
     }
     .desk_portfolio,
     .desk_ball {
-        transition: var(--t_M);
+        transition: var(--t_m);
     }
 
     .desk_portfolio:hover {
@@ -969,7 +972,7 @@ I {
         }
     }
     .description {
-        font-size: var(--t_M);
+        font-size: var(--t_m);
         text-wrap: balance;
     }
     .title {
@@ -1173,7 +1176,7 @@ I {
     background: var(--fc);
     left: 50%;
     transform: translateX(-50%);
-    transition: var(--t_M);
+    transition: var(--t_m);
     border-radius: var(--sm);
 }
 .top_bar {
@@ -1306,7 +1309,7 @@ I {
         width: 100%;
         height: 30rem;
         transform: scale(1);
-        transition: var(--t_M);
+        transition: var(--t_m);
         @include flex(row, center, center);
         z-index: -1;
         IMG {
@@ -1338,13 +1341,13 @@ I {
             text-align: center;
             color: var(--tc);
             font-size: var(--fontSizeXClamp);
-            transition: var(--t_M);
+            transition: var(--t_m);
             opacity: 0.9;
             transform: translateY(100%);
         }
         P {
             padding: var(--lg) 1.5rem;
-            transition: var(--t_M);
+            transition: var(--t_m);
             opacity: 0;
             transform: translateY(100%);
             text-align: center;
@@ -1499,14 +1502,11 @@ I {
     }
 }
 
-.cards_portfolio_container {
-    overflow-y: auto;
-    padding-top: var(--md);
-}
 .lists_container {
-    @include flex(row, flex-start, flex-start);
-    /* flex-wrap: wrap; */
+    @include flex(row, flex-start, center);
+    flex-wrap: wrap;
     width: 100%;
+    gap: var(--md);
     .btn {
         min-height: fit-content;
     }
@@ -1523,95 +1523,52 @@ I {
         font-size: var(--fontSizeMClamp);
     }
 }
-.list_btns_container {
-    position: relative;
-    min-width: auto;
-    max-width: 100%;
+.option_search_btn {
+    background: var(--bgC);
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding-inline: var(--lg);
+    .icon_container {
+        --iconD: 2.5rem;
+        --iconPd: none;
+    }
+}
+.option_btn {
+    border-radius: var(--lg);
 
-    .list_btn {
-        display: block;
-        min-width: auto;
-        width: 100%;
-        background: var(--bgC_st);
-        border: none;
-        border-radius: var(--sm);
-        text-transform: uppercase;
-        padding: var(--md) 3rem;
-        .label_btn {
-            color: var(--tc);
-            pointer-events: none;
-            line-height: 1;
-        }
+    width: 100%;
+    .label_btn {
+        color: var(--tc);
+    }
+    &:not(.option_search_btn) {
+        padding: var(--lg);
+    }
+}
+.options_droper {
+    --extraSpace: 1rem;
+    position: absolute;
+    @include flex(column, flex-start, center);
+    background: var(--bgC);
+    bottom: 0;
+    left: 0;
+    border-radius: var(--lg);
+    border: solid var(--bgColor) 2px;
+    z-index: 2;
 
-        &:hover,
-        &:active,
-        &:focus {
-            filter: hue-rotate(45deg);
-            .label_btn {
-                color: var(--whiteOff);
-            }
-        }
-    }
-    .list_btn:hover,
-    .list_btn:active,
-    .list_btn:focus {
-        color: var(--bgC);
-        background: var(--btnGradient);
-        fill: var(--bgC);
-    }
-    .search_list_btn {
-        text-transform: uppercase;
-        @include flexCenter();
-        gap: var(--md);
-        background: var(--bgC_st);
-        border-radius: 0;
-        border-bottom: solid 2px var(--fc);
-        min-height: fit-content;
-        padding: var(--md) var(--lg);
-        .label_btn {
-            color: var(--tc);
-            pointer-events: none;
-            line-height: 1;
-        }
-        .icon_container {
-            @include flexCenter();
-        }
-    }
-
-    .list_container {
-        position: absolute;
-        @include flex(column, flex-start, center);
-        transition: var(--t_uf);
-        display: none;
-        bottom: 0;
-        left: 0;
-        width: auto;
-        background: var(--bgC_st);
-        transform: translateY(100%);
-        z-index: 2;
-    }
-    .list_down {
-        display: flex;
-    }
-    .arrow_list_icon {
-        transition: rotate 500ms ease;
-        rotate: -180deg;
-    }
-    .arrow_list_icon_active {
-        fill: var(--tc);
-        rotate: 0deg;
-    }
-
-    .list_btn_active {
-        background: var(--btnGradient) !important;
-        .label_btn {
-            color: var(--whiteOff) !important;
-        }
-    }
-    .list_extra_btns_container {
+    max-height: 20rem;
+    overflow: auto;
+    width: max-content;
+    LI {
         width: 100%;
     }
 }
+.options_container {
+    position: relative;
+    width: fit-content;
+}
+
 .form {
     position: relative;
 }
@@ -1645,87 +1602,57 @@ I {
         width: calc(100% - 6rem);
     }
 }
-.modal_window {
-    position: absolute;
+.window {
     @include flex(column, flex-start, flex-start);
-    top: var(--sm);
-    left: 50%;
-    width: 90%;
-    max-width: 720px;
-    height: fit-content;
-    transition: var(--t_M);
-    transform: translate(-50%, -50%);
-    border-radius: var(--lg);
-    padding: var(--xl) 0 0;
-    max-height: calc(100vh - var(--xl));
-    overflow: hidden;
-    display: none;
-    opacity: 0;
-}
-.modal {
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    background: var(--bgC_off);
-    z-index: 9;
-    transition: var(--t_f);
-    display: none;
-    opacity: 0;
-
+    max-height: calc(100vh - (var(--xl) * 2));
     .modal_info {
+        max-height: 100%;
         width: 100%;
-        height: fit-content;
-        margin-bottom: var(--lg);
+        overflow-y: auto;
+        scroll-behavior: smooth;
+        border-top: solid var(--fc) 4px;
+        padding: var(--lg) var(--lg);
+        .inner_link_btn {
+            width: 100%;
+        }
     }
     .modal_header {
         padding: var(--lg) 0;
         width: 100%;
     }
-    .portfolio_modal {
-        max-width: 1800px;
-        min-height: 20rem;
-        overflow: visible;
+    .btn {
+        width: calc(100% - var(--lg));
+        margin: var(--lg) VAR(--md);
     }
+}
+.modal {
+    position: fixed;
+    flex-direction: column;
+    opacity: 0;
+    width: 100%;
+    max-width: 1200px;
+    height: 100%;
+    max-height: 100vh;
+    top: 2rem;
+    color: var(--tc);
+    margin: 0 auto;
+    padding: 0 var(--xl);
+    background: var(--bgC_off);
+    overflow: hidden;
+    transition: var(--t_m);
 
-    .alert_modal,
-    .legal_modal {
-        .btn {
-            width: calc(100% - var(--lg));
-            margin: var(--lg) VAR(--md);
-        }
+    z-index: 9;
+    border: none;
+    .close_btn {
+        position: absolute;
+        top: 0;
+        right: var(--xl);
+        z-index: 5;
     }
-    .alert_modal {
-        .modal_info {
-            text-align: center;
-        }
-    }
-    .legal_modal {
-        .modal_info {
-            overflow: auto;
-            scroll-behavior: smooth;
-            padding-right: var(--lg);
-            border-top: solid var(--fc) 4px;
-            padding: var(--lg) var(--lg) 0 0;
-            .inner_link_btn {
-                width: 100%;
-            }
-        }
-    }
-    .contact_modal {
-        position: relative;
-        .modal_form {
-            width: 100%;
-            .form_response_container {
-                width: calc(100% - 4rem);
-            }
-        }
-    }
-    .submit_container {
-        padding: var(--md);
+    &::backdrop {
+        background: var(--bgC_off);
+        width: 100%;
+        height: 100%;
     }
 }
 .inner_link_btn {
@@ -1956,7 +1883,7 @@ I {
         }
         & *,
         &::after {
-            transition: var(--t_M);
+            transition: var(--t_m);
         }
         &:hover {
             &::after {
@@ -2045,6 +1972,9 @@ I {
     .btns_container {
         justify-content: flex-end;
         gap: 1rem;
+    }
+    .social_btns_container {
+        margin-top: var(--lg);
     }
 }
 .link_text {
@@ -2211,44 +2141,41 @@ I {
     display: none;
     opacity: 0;
 }
-.animation_up {
-    position: relative;
-}
 
-.animation_up:nth-of-type(2),
-.card_up:nth-of-type(2):not(.project_card) {
+[animation-text]:nth-of-type(2),
+[animation-card]:nth-of-type(2):not(.project_card) {
     transition-delay: 100ms;
 }
-.animation_up:nth-of-type(3),
-.card_up:nth-of-type(3):not(.project_card) {
+[animation-text]:nth-of-type(3),
+[animation-card]:nth-of-type(3):not(.project_card) {
     transition-delay: 200ms;
 }
-.animation_up:nth-of-type(4),
-.card_up:nth-of-type(4):not(.project_card) {
+[animation-text]:nth-of-type(4),
+[animation-card]:nth-of-type(4):not(.project_card) {
     transition-delay: 300ms;
 }
-.animation_up:nth-of-type(5),
-.card_up:nth-of-type(5):not(.project_card) {
+[animation-text]:nth-of-type(5),
+[animation-card]:nth-of-type(5):not(.project_card) {
     transition-delay: 400ms;
 }
-.animation_up:nth-of-type(6),
-.card_up:nth-of-type(6):not(.project_card) {
+[animation-text]:nth-of-type(6),
+[animation-card]:nth-of-type(6):not(.project_card) {
     transition-delay: 500ms;
 }
-.animation_up:nth-of-type(7),
-.card_up:nth-of-type(7):not(.project_card) {
+[animation-text]:nth-of-type(7),
+[animation-card]:nth-of-type(7):not(.project_card) {
     transition-delay: 600ms;
 }
-.animation_up:nth-of-type(8),
-.card_up:nth-of-type(8):not(.project_card) {
+[animation-text]:nth-of-type(8),
+[animation-card]:nth-of-type(8):not(.project_card) {
     transition-delay: 700ms;
 }
-.animation_up:nth-of-type(9),
-.card_up:nth-of-type(9):not(.project_card) {
+[animation-text]:nth-of-type(9),
+[animation-card]:nth-of-type(9):not(.project_card) {
     transition-delay: 800ms;
 }
-.animation_up,
-.card_up {
+[animation-text],
+[animation-card] {
     opacity: 0;
     transform: translateY(4rem);
     transition: var(--t_f);
@@ -2268,14 +2195,6 @@ I {
 }
 .show_menu {
     transform: translateY(0);
-}
-.modal_open {
-    transform: translate(-50%, 0);
-    opacity: 1;
-}
-.open_modal {
-    opacity: 1;
-    transform: translate(-50%, -50%);
 }
 .btn_active {
     background: var(--fc);
@@ -2336,12 +2255,59 @@ I {
     color: var(--blackOff);
     border-color: var(--danger);
 }
+
+/*  */
+[hidden],
+[show],
+[options-active],
+[modal-active] {
+    transition: var(--t_f);
+    &::backdrop {
+        transition: var(--t_f);
+        transition-delay: 100ms;
+    }
+}
+[options-active] {
+    transform: translateY(calc(100% + var(--extraSpace)));
+    opacity: 1;
+}
+
+[modal-active] {
+    transform: translateY(0);
+    opacity: 1;
+    &::backdrop {
+        opacity: 1;
+    }
+}
+[options-active="false"],
+[modal-active="false"] {
+    transform: translateY(100%);
+    opacity: 0;
+    &::backdrop {
+        opacity: 0;
+    }
+}
+
 [hidden] {
     display: none;
 }
 [hidden="false"] {
     display: flex;
 }
+[show] {
+    opacity: 1;
+}
+[show="false"] {
+    opacity: 0;
+}
+[btn-active] {
+    background: var(--firstColor);
+}
+[btn-active="false"] {
+    background: inherit;
+}
+
+/*  */
 @media screen and (min-width: 880px) {
     .flex_responsive {
         @include flex(row, center, flex-start);
