--- a/src/css/style.css
+++ b/src/css/style.css
@@ -34,16 +34,6 @@
     transform: translateY(var(--lg));
   }
 }
-@keyframes bounceUp {
-  50% {
-    transform: translateY(-10rem);
-  }
-}
-@keyframes ballShadowOpacity {
-  50% {
-    opacity: 0.2;
-  }
-}
 @keyframes beat {
   10% {
     transform: translate(-50%, -50%) scale(1.3);
@@ -557,8 +547,7 @@ I {
 .deskwork_icon .screen_show {
   opacity: 1;
 }
-.deskwork_icon .desk_portfolio,
-.deskwork_icon .desk_ball {
+.deskwork_icon .desk_portfolio {
   transition: var(--t_m);
 }
 .deskwork_icon .desk_portfolio:hover {
@@ -566,12 +555,6 @@ I {
 }
 .deskwork_icon .desk_ball {
   margin-top: 10rem;
-}
-.deskwork_icon .desk_ball:hover .ball {
-  animation: bounceUp 1000ms 250ms infinite ease-in-out;
-}
-.deskwork_icon .desk_ball:hover .ball_shadow {
-  animation: ballShadowOpacity 1000ms 250ms infinite ease-in-out;
 }
 .deskwork_icon .svg_btn {
   cursor: crosshair;
@@ -979,6 +962,9 @@ I {
   transition: var(--t_f);
   color: var(--tc);
   font-weight: var(--fw_b);
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
 }
 .btn:hover, .btn:active, .btn:focus {
   background: var(--btnGradient);
@@ -1490,6 +1476,15 @@ I {
   min-height: fit-content;
 }
 
+.options_details {
+  text-align: start;
+  margin-left: 1rem;
+}
+
+[option_type=description] {
+  display: block;
+}
+
 .description_portfolio {
   display: flex;
   flex-direction: row;
@@ -1528,7 +1523,7 @@ I {
   color: var(--tc);
 }
 .option_btn:not(.option_search_btn) {
-  padding: var(--lg);
+  padding: var(--lg) var(--xl);
 }
 
 .options_droper {
