--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -69,12 +69,12 @@
     --darkGray: rgb(64, 64, 64);
 
     --black: rgb(26, 26, 26);
-    --blackT: rgb(5, 5, 5, 0.75);
+    --blackT: rgb(5, 5, 5, 0.9);
     --blackST: rgb(5, 5, 5, 0.5);
     --blackOff: rgb(5, 5, 5);
 
-    --white: rgb(245, 245, 245);
-    --whiteT: rgb(250, 250, 250, 0.75);
+    --white: rgb(240, 240, 240);
+    --whiteT: rgb(250, 250, 250, 0.9);
     --whiteST: rgb(250, 250, 250, 0.5);
     --whiteOff: rgb(250, 250, 250);
 
@@ -125,10 +125,12 @@
 }
 
 //!THEMES START
+[color-scheme] {
+    --h: var(--fc);
+}
 [color-scheme="light"] {
     --fc: var(--logoPurpleL);
     --sc: var(--logoMintL);
-    --h: var(--purpleDark);
     --tc: var(--black);
     --bgC: var(--white);
     --bgC_off: var(--whiteOff);
@@ -141,7 +143,6 @@
 [color-scheme="dark"] {
     --fc: var(--logoMintD);
     --sc: var(--logoPurpleD);
-    --h: var(--mintLigth);
     --tc: var(--white);
     --bgC: var(--black);
     --bgC_off: var(--blackOff);
@@ -164,14 +165,14 @@
 }
 
 BODY {
-    --backgroundHero: linear-gradient(transparent, var(--bgC_off));
+    --backgroundHero: linear-gradient(transparent, var(--bgC));
     --t_scale: scale 500ms cubic-bezier(0.51, -0.42, 0.06, 1.45);
 
     --fs_nvh: calc(100svh - var(--nvh));
 
-    --backgroundHero: linear-gradient(transparent, var(--bgC_off));
+    --backgroundHero: linear-gradient(transparent, var(--bgC));
 
-    --bgHeaderSectionContact: linear-gradient(var(--bgC_off) 10%, var(--bgC_st), var(--bgC_off) 90%);
+    --bgHeaderSectionContact: linear-gradient(var(--bgC) 10%, var(--bgC_st), var(--bgC) 90%);
     --danger: var(--lightRed);
     --bgDanger: var(--bgLightRed);
     --good: var(--greenTeal);
@@ -184,7 +185,7 @@ BODY {
     height: auto;
     position: relative;
     overflow-x: hidden;
-    background: var(--bgC_off);
+    background: var(--bgC);
     text-rendering: optimizeSpeed;
 }
 
@@ -928,7 +929,7 @@ I {
     @include flexCenter();
     flex-direction: column;
     position: absolute;
-    background: var(--bgC_off);
+    background: var(--bgC);
     border-radius: var(--lg);
     z-index: 2;
     transition: var(--t_uf);
@@ -1152,7 +1153,7 @@ I {
 }
 .bar {
     position: absolute;
-    height: 2px;
+    height: 4px;
     background: var(--fc);
     left: 50%;
     transform: translateX(-50%);
@@ -1991,12 +1992,14 @@ I {
     left: 0;
     right: 0;
     width: 100%;
-    background: var(--navBg);
+    padding: 1rem;
     z-index: 5;
     transition: all 500ms ease;
     @include flexCenter();
     .content {
-        padding: 0;
+        border-radius: 2rem;
+        padding: 0 2rem;
+        background: var(--navBg);
     }
     .menu_container {
         @include flex(row, space-between, center);
@@ -2049,20 +2052,20 @@ I {
     right: 0;
     top: var(--top);
     bottom: var(--bottom);
-    border-radius: var(--menuRadius);
-    @include flexCenter();
-    flex-direction: var(--menuDirection);
 
     height: auto;
     width: 100%;
-    background: var(--bgC_off);
     transition: var(--t_f);
     transform: var(--menuPosition);
     z-index: 6;
+    @include flexCenter();
     overflow: hidden;
+    background: var(--bgC_t);
 
+    flex-direction: var(--menuDirection);
     opacity: 0;
     display: none;
+
     .extra_btns_container,
     .social_btns_container {
         width: 100%;
@@ -2297,7 +2300,7 @@ I {
 }
 
 /*  */
-@media screen and (min-width: 880px) {
+@media screen and (min-width: 900px) {
     .flex_responsive {
         @include flex(row, center, flex-start);
     }
@@ -2340,7 +2343,7 @@ I {
         }
     }
 }
-@media screen and (min-width: 1000px) {
+@media screen and (min-width: 1070px) {
     .flex_responsive {
         flex-direction: row;
     }
